--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint index.js test",
+    "release": "build/release.sh",
+    "release:note": "node build/gen-release-note.js",
     "test": "webpack --config test/webpack.test.conf.js",
     "test:options": "webpack --config test/webpack.options.conf.js",
     "unit": "jest"
@@ -25,9 +27,11 @@
   "devDependencies": {
     "babel-jest": "^21.2.0",
     "babel-preset-env": "^1.6.1",
+    "conventional-changelog": "^1.1.6",
     "eslint": "^4.10.0",
     "eslint-plugin-vue": "^3.13.1",
     "jest": "^21.2.1",
+    "release": "^2.5.4",
     "vue": "^2.5.3",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.4.0",
