--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^4.10.0",
     "eslint-plugin-vue": "^3.13.1",
     "jest": "^21.2.1",
+    "loader-utils": "^1.1.0",
     "vue": "^2.5.3",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.4.0",
